--- a/style.css
+++ b/style.css
@@ -37,7 +37,7 @@
 h1{
   color:white;
   text-align: center;
-  font-family: Brush Script MT;
+  font-family:Fantasy;
   text-shadow: 2px 2px 4px #000000;
   padding-top:-40px;
 }
